--- a/control/templates/base.html
+++ b/control/templates/base.html
@@ -7,8 +7,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}" />
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.jpg' %}"/>
     {% block head %}{% endblock %}
     <title>Система контроля результатов обучения</title>
@@ -34,7 +34,7 @@
           {% if user.is_authenticated %}
             {% if user.is_staff %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'settings' %}#dashboard">Администрирование</a>
+                    <a class="nav-link" href="{% url 'settings_dashboard' %}">Администрирование</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">/</a>
