--- a/control/templates/control/settings/group_edit.html
+++ b/control/templates/control/settings/group_edit.html
@@ -15,8 +15,8 @@
       <div class="col text-center">
       <form method="post">
         {% csrf_token %}
-        {{ user_form|crispy }}
-        {{ profile_form|crispy }}
+        {{ form|crispy }}
+        {{ form|crispy }}
         <button type="submit">Save changes</button>
        </form>
 
