--- a/control/templates/control/settings/groups.html
+++ b/control/templates/control/settings/groups.html
@@ -31,7 +31,7 @@
   <div class="tab-content">
     <div class=" fade show active" id="groups">
       <br/>
-      <div class="text-right"><td><a href="{% url 'user_add' %}" class="btn btn-primary">Создать</a></td></div>
+      <div class="text-right"><td><a href="{% url 'group_add' %}" class="btn btn-primary">Создать</a></td></div>
       <br/>
       <table id="user-table" class="table table-striped table-bordered sortable">
         <thead>
