--- a/control/templates/control/course.html
+++ b/control/templates/control/course.html
@@ -55,7 +55,7 @@
         <dl>
             <dt>{{ discipline.name }}</dt>
             {% for lesson in discipline.lesson.all %}
-            <dd><a class="nav-link" href="{% url 'lesson' slug=course.slug id=lesson.id %}">Редактировать</a></dd>
+            <dd><a class="nav-link" href="{% url 'lesson' slug=course.slug pk=lesson.id %}">{{ lesson.name }}</a></dd>
             {% endfor %}
         </dl>
         {% endfor %}
