--- a/control/templates/control/settings/group_edit.html
+++ b/control/templates/control/settings/group_edit.html
@@ -11,7 +11,7 @@
     <div class="col">
     </div>
     <div class="col-6">
-      <div class="col col-lg-3"><td><a href="" class="btn btn-primary">Назад</a></td></div>
+      <div class="col col-lg-3"><a href="" class="btn btn-primary">Назад</a></div>
       <div class="col text-center">
       <form method="post">
         {% csrf_token %}
