--- a/control/templates/control/index.html
+++ b/control/templates/control/index.html
@@ -23,18 +23,6 @@
 <div class="tab-content">
   <div class="tab-pane fade show active" id="all">
     <div class="row">
-      {% if request.user.is_staff %}
-        <div class="col-md-3 col-sm-6 col-12 col-xl-3" >
-          <div class="card h-100">
-            <img class="card-img-top" width="10rem" src="{% static 'img/new.jpg' %}" alt="Превью">
-            <div class="card-body">
-              <h5 class="card-title">Новый курс</h5>
-              <p class="card-text">Создать новый курс</p>
-              <a href="{% url 'course_add' %}" class="btn btn-primary">Создать</a>
-            </div>
-          </div>
-        </div>
-      {% endif %}
       {% if all_courses|length > 0 %}
         {% for course in all_courses %}
         <div class="col-md-3 col-sm-6 col-12 col-xl-3" >
@@ -63,10 +51,14 @@
         {% for course in avaible_courses %}
           <div class="col-md-3 col-sm-6 col-12 col-xl-3" >
             <div class="card h-100">
-              <img class="card-img-top" width="10rem" src="{{ course.image.url }}" alt="Превью">
+              {% if course.image %}
+                <img class="card-img-top" width="10rem" src="{{ course.image.url }}" alt="Превью">
+              {% else %}
+                <img class="card-img-top" width="10rem" src="{% static 'img/no_image.png' %}" alt="Превью">
+              {% endif %}
               <div class="card-body">
                 <h5 class="card-title">{{ course.name }}</h5>
-                <p class="card-text">{{ course.description|splitter }}</p>
+                <p class="card-text">{{ course.description|striptags|truncatechars:50|safe }}</p>
                 <a href="{{ course.get_absolute_url }}" class="btn btn-primary">Больше о курсе</a>
               </div>
             </div>
