--- a/control/templates/control/settings/courses.html
+++ b/control/templates/control/settings/courses.html
@@ -1,44 +1,20 @@
-{% extends 'base.html' %}
+{% extends 'control/settings/base_settings.html' %}
 {% load static %}
 
 {% load crispy_forms_tags %}
 
-
-{% block head %}
-  <script src="{% static 'js/highcharts.js' %}"></script>
-  <link rel="stylesheet" type="text/css" href="{% static 'css/jquery.dataTables.min.css' %}" />
-  <script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
-{% endblock %}
-
-
-{% block body %}
-<div class="container">
-  <h3>Настройки курсов</h3>
-  <ul class="nav nav-tabs">
-    <li class="nav-item">
-    <a class="nav-link" href="{% url 'settings_dashboard' %}">Статистика системы</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="{% url 'settings_users' %}">Пользователи</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="{% url 'settings_groups' %}">Группы</a>
-    </li>
-    <li class="nav-item active">
-      <a class="nav-link" href="{% url 'settings_courses' %}">Курсы</a>
-    </li>
-  </ul>
-  <div class="tab-content">
+{% block tab-content %}
     <div class="tab-pane fade show active" id="courses">
       <br/>
       <div class="text-right"><td><a href="{% url 'course_add' %}" class="btn btn-primary">Создать</a></td></div>
       <br/>
-      <table id="user-table" class="table table-striped table-bordered sortable">
+      <table id="table" class="table table-striped table-bordered sortable">
         <thead>
           <tr>
             <th class="th-sm">Наименование курса</th>
-            <th class="th-sm">Ведущие курса</th>
-            <th class="th-sm"></th>
+            <th class="th-sm">Ответственный</th>
+            <th class="th-sm">Дисциплины</th>
+            <th class="th-sm">Группы</th>
             <th class="th-sm">Редактировать курс</th>
             <th class="th-sm">Удалить курс</th>
           </tr>
@@ -47,26 +23,29 @@
         {% for course in courses %}
           <tr>
             <td>{{ course.name }}</td>
-            <td>{% if user.is_staff %} Нет {% else %} Да {% endif %}</td>
+            <td>{{ course.owner.last_name }} {{ course.owner.first_name }} {{ course.owner.profile.patronymic }}</td>
             <td></td>
+            <td>{% for group in course.group.all %} {{ group.name }}&nbsp; {% endfor %}</td>
             <td><a href="{% url 'course_edit' slug=course.slug %}">Редактировать</a></td>
-            <td><a href="{% url 'course_edit' slug=course.slug %}">Удалить</a></td>
-
+            <td>
+              <form action="{% url 'course_edit' slug=course.slug %}" method="post">
+                  {% csrf_token %}
+                  <button class="btn btn-danger" type="submit" href="">Удалить</button>
+              </form>
           </tr>
         {% endfor %}
         </tbody>
         <tfoot>
           <tr>
-            <th class="th-sm">ФИО</th>
-            <th class="th-sm">Ученик</th>
-            <th class="th-sm">Последнее посещение</th>
-            <th class="th-sm">Текущие курсы</th>
-            <th class="th-sm">Редактировать</th>
+            <th class="th-sm">Наименование курса</th>
+            <th class="th-sm">Ответственный</th>
+            <th class="th-sm">Дисциплины</th>
+            <th class="th-sm">Группы</th>
+            <th class="th-sm">Редактировать курс</th>
+            <th class="th-sm">Удалить курс</th>
           </tr>
         </tfoot>
       </table>
     </div>
-  </div>
-</div>
 {% endblock %}
 
