--- a/control/templates/control/settings/edit/course_edit.html
+++ b/control/templates/control/settings/edit/course_edit.html
@@ -14,7 +14,7 @@
   {% csrf_token %}
     {{ form.slug.as_hidden }}
     <div class="row">
-      <div class="col col-lg-3"><td><a href="javascript:history.go(-1)" class="btn btn-primary">Назад</a></td></div>
+      <div class="col col-lg-3"><a href="{% url 'settings_courses' %}" class="btn btn-primary">Назад</a></div>
       {% if course %}
       <div class="col col-lg-6 text-right"><button type="submit" value="Update" class="btn btn-primary">Сохранить</button></div>
       {% else %}
@@ -55,7 +55,7 @@
         {{ form.description }}
     </div>
       <div class="col">
-        {{ form.disciplines|as_crispy_field }}
+        {{ form.owner|as_crispy_field }}
         {% if course %}
           <h4>Дисциплины курса:</h4>
           <ul>
