--- a/control/templates/control/settings/users.html
+++ b/control/templates/control/settings/users.html
@@ -1,39 +1,15 @@
-{% extends 'base.html' %}
+{% extends 'control/settings/base_settings.html' %}
 {% load static %}
 
 {% load crispy_forms_tags %}
 
 
-{% block head %}
-  <script src="{% static 'js/highcharts.js' %}"></script>
-  <link rel="stylesheet" type="text/css" href="{% static 'css/jquery.dataTables.min.css' %}" />
-  <script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
-{% endblock %}
-
-
-{% block body %}
-<div class="container">
-  <h3>Настройки пользователей</h3>
-  <ul class="nav nav-tabs">
-    <li class="nav-item">
-    <a class="nav-link" href="{% url 'settings_dashboard' %}">Статистика системы</a>
-    </li>
-    <li class="nav-item active">
-      <a class="nav-link" href="{% url 'settings_users' %}">Пользователи</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="{% url 'settings_groups' %}">Группы</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="{% url 'settings_courses' %}">Курсы</a>
-    </li>
-  </ul>
-  <div class="tab-content">
+{% block tab-content %}
     <div class="tab-pane fade show active" id="users">
       <br/>
       <div class="text-right"><td><a href="{% url 'user_add' %}" class="btn btn-primary">Создать</a></td></div>
       <br/>
-      <table id="user-table" class="table table-striped table-bordered sortable">
+      <table id="table" class="table table-striped table-bordered sortable">
         <thead>
           <tr>
             <th class="th-sm">ФИО</th>
@@ -55,7 +31,7 @@
             <td>
               <form action="{% url 'user_del' pk=user.pk %}" method="post">
                   {% csrf_token %}
-                  <button type="submit" href="">Удалить </button>
+                  <button class="btn btn-danger" type="submit" href="">Удалить </button>
               </form>
             </td>
           </tr>
@@ -72,7 +48,5 @@
         </tfoot>
       </table>
     </div>
-  </div>
-</div>
 {% endblock %}
 
