--- a/control/templates/control/settings/courses.html
+++ b/control/templates/control/settings/courses.html
@@ -4,7 +4,8 @@
 {% load crispy_forms_tags %}
 
 {% block tab-content %}
-    <div class="tab-pane fade show active" id="courses">
+    <h3>Курсы</h3>
+    <div>
       <br/>
       <div class="text-right"><td><a href="{% url 'course_add' %}" class="btn btn-primary">Создать</a></td></div>
       <br/>
