--- a/control/templates/control/settings/group_test.html
+++ b/control/templates/control/settings/group_test.html
@@ -8,17 +8,16 @@
     <h3>Группы</h3>
     <div>
       <br/>
-      <div class="text-right"><td><a href="{% url 'group_add' %}" class="btn btn-primary">Создать</a></td></div>
+      <div class="text-right"><td><a href="{% url 'group_test_add' %}" class="btn btn-primary">Создать</a></td></div>
       <br/>
       <table id="table" class="table table-striped table-bordered sortable ">
         <thead>
           <tr>
             <th class="th-sm">Группа</th>
-            <th class="th-sm">Курс</th>
-            <th class="th-sm">Статус</th>
-            <th class="th-sm">Заявки</th>
-            <th class="th-sm">Учащиеся</th>
-            <th class="th-sm">Учебный план</th>
+            <th class="th-sm">Задание</th>
+            <th class="th-sm">Время начала</th>
+            <th class="th-sm">Время завершения</th>
+            <th class="th-sm">Попыток</th>
             <th class="th-sm">Редактировать</th>
             <th class="th-sm">Удалить группу</th>
           </tr>
@@ -30,17 +29,12 @@
             <td>{{ group.course }}</td>
             <td>{{ group.get_status }}</td>
             <td><a href="{% url 'requests_group' pk=group.pk %}">{{ group.requests.count }}</a></td>
-            <td><a href="{% url 'students_group' pk=group.pk %}">{{ group.students.count }}</a></td>
+
+            </td></a></td>
+
+            <td><a href="{% url 'group_test_edit' pk=group_test.id %}">Редактировать</a></td>
             <td>
-              <form action="{% url 'group_test' %}" method="post">
-                  {% csrf_token %}
-                  <input hidden name="group_pk" value="{{ group.pk }}">
-                  <button class="btn btn-primary" type="submit" href="">Настроить</button>
-              </form>
-            </td>
-            <td><a href="{% url 'group_edit' pk=group.id %}">Редактировать</a></td>
-            <td>
-              <form action="{% url 'group_del' pk=group.pk %}" method="post">
+              <form action="{% url 'group_test_del' pk=group_test.pk %}" method="post">
                   {% csrf_token %}
                   <button class="btn btn-danger" type="submit" href="">Удалить </button>
               </form>
@@ -51,11 +45,10 @@
         <tfoot>
           <tr>
             <th class="th-sm">Группа</th>
-            <th class="th-sm">Курс</th>
-            <th class="th-sm">Статус</th>
-            <th class="th-sm">Заявки</th>
-            <th class="th-sm">Учащиеся</th>
-            <th class="th-sm">Учебный план</th>
+            <th class="th-sm">Задание</th>
+            <th class="th-sm">Время начала</th>
+            <th class="th-sm">Время завершения</th>
+            <th class="th-sm">Попыток</th>
             <th class="th-sm">Редактировать</th>
             <th class="th-sm">Удалить группу</th>
           </tr>
@@ -64,4 +57,3 @@
     </div>
 
 {% endblock %}
-
