--- a/control/templates/control/settings/lessons.html
+++ b/control/templates/control/settings/lessons.html
@@ -4,30 +4,30 @@
 {% load crispy_forms_tags %}
 
 {% block tab-content %}
-    <h3>Дисциплины</h3>
+    <h3>Занятия</h3>
     <div>
       <br/>
-      <div class="text-right"><td><a href="{% url 'discipline_add' %}" class="btn btn-primary">Создать</a></td></div>
+      <div class="text-right"><td><a href="{% url 'lesson_add' %}" class="btn btn-primary">Создать</a></td></div>
       <br/>
       <table id="table" class="table table-striped table-bordered sortable">
         <thead>
           <tr>
+            <th class="th-sm">Наименование занятия</th>
             <th class="th-sm">Наименование дисциплины</th>
-            <th class="th-sm">Наименование курса</th>
             <th class="th-sm">Преподаватель</th>
             <th class="th-sm">Редактировать</th>
-            <th class="th-sm">Удалить дисциплину</th>
+            <th class="th-sm">Удалить занятие</th>
           </tr>
         </thead>
         <tbody>
-        {% for discipline in disciplines %}
+        {% for lesson in lessons %}
           <tr>
-            <td>{{ discipline.name }}</td>
-            <td>{{ discipline.course }}</td>
-            <td>{{ discipline.teacher.last_name }} {{ discipline.teacher.first_name }} {{ discipline.teacher.profile.patronymic }}</td>
-            <td><a href="{% url 'discipline_edit' pk=discipline.pk %}">Редактировать</a></td>
+            <td>{{ lesson.name }}</td>
+            <td>{{ lesson.discipline.name }}</td>
+            <td>{{ lesson.discipline.teacher.last_name }} {{ lesson.discipline.teacher.first_name }} {{ lesson.discipline.teacher.profile.patronymic }}</td>
+            <td><a href="{% url 'lesson_edit' pk=lesson.pk %}">Редактировать</a></td>
             <td>
-              <form action="{% url 'discipline_edit' pk=discipline.pk %}" method="post">
+              <form action="{% url 'lesson_edit' pk=lesson.pk %}" method="post">
                   {% csrf_token %}
                   <button class="btn btn-danger" type="submit" href="">Удалить</button>
               </form>
@@ -36,11 +36,11 @@
         </tbody>
         <tfoot>
           <tr>
+            <th class="th-sm">Наименование занятия</th>
             <th class="th-sm">Наименование дисциплины</th>
-            <th class="th-sm">Наименование курса</th>
             <th class="th-sm">Преподаватель</th>
             <th class="th-sm">Редактировать</th>
-            <th class="th-sm">Удалить дисциплину</th>
+            <th class="th-sm">Удалить занятие</th>
           </tr>
         </tfoot>
       </table>
