--- a/control/templates/control/settings/base_settings.html
+++ b/control/templates/control/settings/base_settings.html
@@ -42,7 +42,7 @@
       <a class="nav-link" href="{% url 'settings_lessons' %}">Занятия</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{% url 'settings_tests' %}">Задания</a>
+      <a class="nav-link" href="{% url 'settings_tests' %}">Тестовые задания</a>
     </li>
   </ul>
   {% block tab-content %}{% endblock %}
