--- a/control/templates/control/settings/directions.html
+++ b/control/templates/control/settings/directions.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_tags %}
 
 {% block tab-content %}
-    <h3>Курсы</h3>
+    <h3>Напрвления</h3>
     <div>
       <br/>
       <div class="text-right"><td><a href="{% url 'direction_add' %}" class="btn btn-primary">Создать</a></td></div>
