--- a/control/templates/control/settings/group_test.html
+++ b/control/templates/control/settings/group_test.html
@@ -5,7 +5,7 @@
 
 
 {% block tab-content %}
-    <h3>Группы</h3>
+    <h3>Учебный план</h3>
     <div>
       <br/>
       <div class="text-right"><td><a href="{% url 'group_test_add' %}" class="btn btn-primary">Создать</a></td></div>
